# hourglass

./: CMakeLists.txt  LICENSE  README.md  SOUNDS_README.md  main.cpp  resources.qrc
include/: animatedbackgroundwidget.h  app_ui.h  mainwindow.h  soundplayer.h  systemtraymanager.h  timer_engine.h  timerengine.h
src/: animatedbackgroundwidget.cpp  app_ui.cpp  main.cpp  mainwindow.cpp  soundplayer.cpp  systemtraymanager.cpp  timer_engine.cpp  timerengine.cpp
